syntax="proto3";
package mygrpc;
//定义服务
service Helloserver{
  //一个打招呼的服务
  rpc Sayhello(HelloReq)returns (HelloRsp){}
  //一个说名字的服务
  rpc Sayname(NameRep)returns(NameRsp){}
}
//客户端发送给服务端
message HelloReq{
  string name=1;
}
//服务端返回给客户端
message HelloRsp{
  string msg=1;
}


//客户端发送给服务端
message NameRep{
  string name=1;
}
//服务端返回给客户端
message  NameRsp{
  string name=1;
}